# django-LLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codecov.yml  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
accounts/: tests.py  urls.py  views.py
accounts/templates/accounts/: password_reset_email.txt
agent/: checkpointer.py  graph.py  rag.py  rag_graph.py  tools.py
chat/: admin.py  ingestion.py  models.py  tests.py  urls.py  views.py
chat/management/commands/: ingest.py
chat/migrations/: 0001_initial.py  0002_document.py
config/: appconfig.py  settings.py  urls.py
docker/: entrypoint.sh
sample_docs/: zorblax-3000.md
templates/chat/: index.html
